@@ -110,15 +110,17 @@ void IIPImage::testImageType() throw(file_error)
     unsigned char j2k[10] = {0x00,0x00,0x00,0x0C,0x6A,0x50,0x20,0x20,0x0D,0x0A};
 
     // Magic file signatures for TIFF (See http://www.garykessler.net/library/file_sigs.html)
-    unsigned char stdtiff[3] = {0x49,0x20,0x49};      // TIFF
-    unsigned char lsbtiff[4] = {0x49,0x49,0x2A,0x00}; // Little Endian TIFF
-    unsigned char msbtiff[4] = {0x49,0x49,0x2A,0x00}; // Big Endian TIFF
-    unsigned char bigtiff[4] = {0x4D,0x4D,0x00,0x2B}; // BigTIFF format
+    unsigned char stdtiff[3] = {0x49,0x20,0x49};       // TIFF
+    unsigned char lsbtiff[4] = {0x49,0x49,0x2A,0x00};  // Little Endian TIFF
+    unsigned char msbtiff[4] = {0x49,0x49,0x2A,0x00};  // Big Endian TIFF
+    unsigned char lbigtiff[4] = {0x4D,0x4D,0x00,0x2B}; // Little Endian BigTIFF
+    unsigned char bbigtiff[4] = {0x49,0x49,0x2B,0x00}; // Big Endian BigTIFF
 
     // Compare our header sequence to our magic byte signatures
     if( memcmp( header, j2k, 10 ) == 0 ) format = JPEG2000;
-    else if( memcmp( header, stdtiff, 3 ) == 0 || memcmp( header, lsbtiff, 4 ) == 0
-	     || memcmp( header, msbtiff, 4 ) == 0 || memcmp( header, bigtiff, 4 ) == 0 ){
+    else if( memcmp( header, stdtiff, 3 ) == 0
+	     || memcmp( header, lsbtiff, 4 ) == 0 || memcmp( header, msbtiff, 4 ) == 0
+	     || memcmp( header, lbigtiff, 4 ) == 0 || memcmp( header, bbigtiff, 4 ) == 0 ){
       format = TIF;
     }
     else format = UNSUPPORTED;
